--- a/random-quote-gen/public/index.html
+++ b/random-quote-gen/public/index.html
@@ -27,6 +27,23 @@
     <title>Random Quote Generator</title>
   </head>
   <body>
+    <main>
+      <section id="wrapper">
+        <div id="quote-box">
+          <div id="text-box">
+            <span id="text"></span>
+          </div>
+          <div id="author-box">
+            <span id="author"></span>
+          </div>
+          <div class="buttons">
+            <a class="button" id="tweet-quote"></a>
+            <a class="button" id="tumblr-quote"></a>
+            <button class="button" id="new-quote">New Quote</button>
+          </div>
+        </div>
+      </section>
+    </main>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
