--- a/random-quote-gen/public/index.html
+++ b/random-quote-gen/public/index.html
@@ -37,8 +37,8 @@
             <span id="author"></span>
           </div>
           <div class="buttons">
-            <a class="button" id="tweet-quote"></a>
-            <a class="button" id="tumblr-quote"></a>
+            <a class="button" id="tweet-quote" target="_top"></a>
+            <a class="button" id="tumblr-quote" target="_blank"></a>
             <button class="button" id="new-quote">New Quote</button>
           </div>
         </div>
